Update index.html with new content
Removed placeholder content and added a new message.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <header class="site-header">
     <div class="container">
       <div class="logo">dogleg<span>.band</span></div>
-      <nav class="nav">
+     <!-- <nav class="nav">
         <a href="#about">About</a>
         <a href="#music">Music</a>
         <a href="#shows">Shows</a>
         <a href="#contact">Contact</a>
-      </nav>
+      </nav> -->
     </div>
   </header>
 
@@ -32,71 +32,8 @@
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-text">
-          <h1>dogleg.band</h1>
-          <p>Website coming online. Stay tuned for music, shows, and updates.</p>
-          <div class="hero-actions">
-            <a class="btn primary" href="#music">Listen</a>
-            <a class="btn secondary" href="#contact">Contact</a>
-          </div>
-        </div>
-      </div>
-    </section>
+          <p>I'm back homies</p>
 
-    <!-- ABOUT -->
-    <section id="about" class="section">
-      <div class="container">
-        <h2>About</h2>
-        <p>
-          This is the placeholder landing page for <strong>dogleg.band</strong>.
-          Customize this text with your story, project description, or whatever
-          you want visitors to know first.
-        </p>
-      </div>
-    </section>
-
-    <!-- MUSIC / LINKS -->
-    <section id="music" class="section section-alt">
-      <div class="container">
-        <h2>Music / Links</h2>
-        <p>Add your links here – Spotify, Bandcamp, SoundCloud, YouTube, etc.</p>
-        <ul class="link-list">
-          <li><a href="#" target="_blank" rel="noreferrer">Spotify (coming soon)</a></li>
-          <li><a href="#" target="_blank" rel="noreferrer">Bandcamp (coming soon)</a></li>
-          <li><a href="#" target="_blank" rel="noreferrer">YouTube (coming soon)</a></li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- SHOWS -->
-    <section id="shows" class="section">
-      <div class="container">
-        <h2>Shows</h2>
-        <p>No shows announced yet. Update this section when you have dates.</p>
-        <div class="shows-list">
-          <!-- Example (delete or duplicate as needed)
-          <article class="show">
-            <h3>City, Venue</h3>
-            <p class="show-date">July 27, 2025</p>
-            <p class="show-notes">All ages · Doors at 7pm</p>
-          </article>
-          -->
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="section section-alt">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>
-          Put your preferred contact here: email, booking address, or a form
-          service link (e.g. Typeform).
-        </p>
-        <p class="contact-line">
-          Email: <a href="mailto:info@dogleg.band">info@dogleg.band</a>
-        </p>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
