--- a/index.html
+++ b/index.html
@@ -1,49 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Interactive Eye-Following Card</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Wrapper is optional; you can remove this and just use .eye-card anywhere -->
-  <div class="page-wrapper">
-    <div class="eye-card">
-      <div class="eye-card-inner">
-        <div class="character">
-          <div class="face">
-            <div class="eye eye-left">
-              <div class="eyeball">
-                <div class="pupil"></div>
-              </div>
-            </div>
-
-            <div class="eye eye-right">
-              <div class="eyeball">
-                <div class="pupil"></div>
-              </div>
-            </div>
-
-            <!-- Optional little mouth / detail -->
-            <div class="mouth"></div>
-          </div>
-        </div>
-
-        <div class="eye-card-content">
-          <h1 class="card-title">Cookie Monster Color</h1>
-          <p class="card-subtitle">
-            A playful, interactive card where the character’s eyes follow your cursor.
-          </p>
-          <button class="primary-btn">Get Started</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Script -->
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Cookie Monster Card - Interactive eye-tracking card component" />
+    <meta name="author" content="Original design by Rafael Serra" />
+    <title>Cookie Monster Card</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/main.tsx"></script>
+  </body>
 </html>
