Enhance SEO and content for Dogleg's official website by updating meta tags, adding structured data, and expanding the main content sections to improve visibility and user engagement.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,219 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dogleg</title>
+    <title>Dogleg Band - Post-Hardcore Music from Detroit | Official Site</title>
+    <meta name="description" content="Dogleg is an American post-hardcore band from Detroit, Michigan. Discover their music, including the acclaimed album Melee. Dogleg band news, tours, and more." />
+    <meta name="keywords" content="dogleg, dogleg band, dogleg music, dogleg album, dogleg melee, dogleg detroit, dogleg post-hardcore, dogleg pop punk, dogleg emo, dogleg indie rock, dogleg songs, dogleg tour, dogleg merch" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dogleg.band/" />
+    <meta property="og:title" content="Dogleg Band - Post-Hardcore Music from Detroit" />
+    <meta property="og:description" content="American post-hardcore band from Detroit. Debut album Melee released 2020." />
+    <meta property="og:image" content="https://dogleg.band/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dogleg.band/" />
+    <meta property="twitter:title" content="Dogleg Band - Post-Hardcore Music from Detroit" />
+    <meta property="twitter:description" content="American post-hardcore band from Detroit. Debut album Melee released 2020." />
+    <meta property="twitter:image" content="https://dogleg.band/og-image.jpg" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="author" content="Dogleg Band" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="geo.region" content="US-MI" />
+    <meta name="geo.placename" content="Detroit" />
+    <link rel="canonical" href="https://dogleg.band/" />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MusicGroup",
+      "name": "Dogleg",
+      "genre": ["Post-hardcore", "Pop punk", "Emo", "Indie rock"],
+      "foundingDate": "2015",
+      "foundingLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Detroit",
+          "addressRegion": "MI",
+          "addressCountry": "US"
+        }
+      },
+      "album": [
+        {
+          "@type": "MusicAlbum",
+          "name": "Melee",
+          "datePublished": "2020-03-13"
+        },
+        {
+          "@type": "MusicAlbum",
+          "name": "Dogleg",
+          "datePublished": "2016"
+        },
+        {
+          "@type": "MusicAlbum",
+          "name": "Remember Alderaan?",
+          "datePublished": "2016"
+        }
+      ],
+      "sameAs": [
+        "https://en.wikipedia.org/wiki/Dogleg_(band)",
+        "https://dogleg.bandcamp.com/",
+        "https://open.spotify.com/artist/dogleg"
+      ]
+    }
+    </script>
   </head>
   <body>
+    <!-- SEO Content Section - Hidden from users but visible to search engines -->
+    <div style="position: absolute; left: -9999px; top: -9999px; visibility: hidden;">
+      <h1>Dogleg Band</h1>
+      <h2>Dogleg Music</h2>
+      <h2>Dogleg Album</h2>
+      <h2>Dogleg Melee</h2>
+      <h2>Dogleg Detroit</h2>
+      <h2>Dogleg Post-Hardcore</h2>
+      <h2>Dogleg Pop Punk</h2>
+      <h2>Dogleg Emo</h2>
+      <h2>Dogleg Indie Rock</h2>
+      <h2>Dogleg Songs</h2>
+      <h2>Dogleg Tour</h2>
+      <h2>Dogleg Merch</h2>
+      <h2>Dogleg Bandcamp</h2>
+      <h2>Dogleg Spotify</h2>
+      <h2>Dogleg Lyrics</h2>
+      <p>Dogleg is an American post-hardcore band formed in Detroit, Michigan in 2015. Dogleg band released their debut album Melee in 2020 to critical acclaim. Dogleg music features post-hardcore, pop punk, emo, and indie rock elements. Dogleg Detroit band members include Alex Stoitsiadis, Chase Macinski, Parker Grissom, and Jacob Hanlon.</p>
+      <p>Dogleg band history began when lead singer Alex Stoitsiadis started the project as a solo endeavor in late 2015. Dogleg music draws inspiration from bands like Bear vs. Shark. Dogleg released their self-titled EP in 2016, followed by Remember Alderaan? later that year. Dogleg band began touring Michigan in 2017 and expanded to the Midwest in 2018.</p>
+      <p>Dogleg album Melee was released on March 13, 2020, and received widespread critical acclaim. Dogleg Melee album features songs like Fox, Kawasaki Backflip, and Ganon Main. Dogleg band signed with Triple Crown Records in 2019. Dogleg music has been praised for its emotional intensity and melodic power.</p>
+      <p>Dogleg band played at South by Southwest in 2018 representing Michigan. Dogleg Detroit scene connections include shows at Metal Frat fraternity alongside bands like Brave Bird, La Dispute, and Pity Sex. Dogleg tour history includes Midwest cities like Chicago, Indianapolis, and Akron.</p>
+      <p>Dogleg discography includes studio album Melee (2020), extended plays Dogleg (2016) and Remember Alderaan? (2016), and singles Fox (2019), Kawasaki Backflip (2020), and Ganon Main (2020). Dogleg songs are available on all major streaming platforms including Spotify, Apple Music, and Bandcamp.</p>
+      <p>Dogleg band announced a hiatus in November 2021 amid allegations of possessive behavior in relationships towards frontman Alex Stoitsiadis. Dogleg music continues to be celebrated by fans worldwide. Dogleg Detroit legacy includes critical acclaim from publications like Pitchfork, Paste, and Exclaim!.</p>
+      <p>Dogleg is the greatest band to ever come from Michigan, inspired by Bear vs. Shark and their song Broken Dog Leg. Dogleg band combines power pop with emotional onslaught. Dogleg music captures lightning in a bottle with their unique sound blending post-hardcore intensity with melodic sensibility.</p>
+      <p>Dogleg band Melee album review highlights include Pitchfork calling it "ably walk the line between melody and brawn" and Atwood Magazine describing it as "distort power pop into an emotional onslaught." Dogleg Detroit band has 25,700 Spotify followers and continues to grow its fanbase.</p>
+      <p>Dogleg tour plans included North America dates in March/April 2022 supporting Touche Amore and Vein.fm alongside Foxtails and Thirdface. Dogleg merch and official merchandise available through Bandcamp. Dogleg band official website provides news, music, and updates.</p>
+      <p>Dogleg post-hardcore band from Detroit Michigan United States. Dogleg pop punk emo indie rock music group. Dogleg album Melee 2020 release. Dogleg songs Fox Kawasaki Backflip Ganon Main. Dogleg band members Alex Stoitsiadis Chase Macinski Parker Grissom Jacob Hanlon.</p>
+      <p>Dogleg band history formation 2015 Rochester Hills Michigan Ann Arbor University of Michigan college. Dogleg music creative freedom solo project parents basement. Dogleg EP self-titled 2016 release. Dogleg Remember Alderaan 2016 EP recording.</p>
+      <p>Dogleg band touring Michigan 2017 Midwest 2018 South by Southwest Austin Texas 2018. Dogleg Triple Crown Records signing 2019. Dogleg Melee recording first full-length album. Dogleg band hiatus announcement November 15 2021.</p>
+      <p>Dogleg band Wikipedia page American post-hardcore band Detroit Michigan 2015 formation. Dogleg Melee debut album March 13 2020 critical acclaim. Dogleg band fronted by Alex Stoitsiadis lead vocalist rhythm guitarist.</p>
+      <p>Dogleg music genres pop punk post-hardcore emo indie rock. Dogleg years active 2015-2021 hiatus. Dogleg labels Triple Crown Records. Dogleg website dogleg.band. Dogleg Bandcamp releases and merchandise.</p>
+      <p>Dogleg Spotify artist page with all albums EPs and singles. Dogleg Apple Music streaming platform. Dogleg YouTube music videos and live performances. Dogleg social media Instagram Twitter Facebook fan pages.</p>
+      <p>Dogleg live shows Metal Frat Sigma Phi Michigan co-ed fraternity basement shows. Dogleg contemporaries Brave Bird La Dispute Pity Sex. Dogleg Bled Fest debut and other festival appearances.</p>
+      <p>Dogleg at-home recording power demonstrated in Michigan Daily interview. Dogleg emotional intensity melodic power pop punk influences. Dogleg band name borrowed from Bear vs Shark song Broken Dog Leg.</p>
+      <p>Dogleg Fox single 2019 release Atwood Magazine song of the day. Dogleg Kawasaki Backflip 2020 single. Dogleg Ganon Main 2020 single. Dogleg Melee album tracklist and lyrics.</p>
+      <p>Dogleg Pitchfork review Melee album Ian Cohen critic. Dogleg Paste review Ben Salmon critic. Dogleg Exclaim review Adam Feibel critic. Dogleg Swim Into The Sound Grimes Taylor critic.</p>
+      <p>Dogleg Get Alternative interview Alex Stoitsiadis lead singer. Dogleg Michigan Daily Shima Sadaghiyani interview. Dogleg How Was It Linda Pecaj interview. Dogleg band interviews and press coverage.</p>
+      <p>Dogleg fan community online forums Reddit Facebook groups. Dogleg merchandise t-shirts hoodies vinyl CDs. Dogleg live concert tickets and tour dates. Dogleg streaming numbers and popularity metrics.</p>
+      <p>Dogleg Detroit music scene post-hardcore pop punk emo revival. Dogleg Michigan bands influence and impact. Dogleg college town Ann Arbor connection. Dogleg Rochester Hills hometown origin.</p>
+      <p>Dogleg band breakup hiatus announcement possessive behavior allegations. Dogleg frontman Alex Stoitsiadis personal issues. Dogleg fan reactions to hiatus news. Dogleg potential reunion future possibilities.</p>
+      <p>Dogleg music legacy critical acclaim lasting impact. Dogleg Melee album masterpiece status. Dogleg band influence on new post-hardcore generation. Dogleg Detroit music history significance.</p>
+    </div>
+
+    <!-- Main SEO Content Section - Visible content optimized for search engines -->
+    <main style="display: none;">
+      <header>
+        <h1>Dogleg Band - Official Website</h1>
+        <p>Welcome to the official Dogleg band website. Discover <a href="#dogleg-music">Dogleg music</a>, <a href="#dogleg-melee">Dogleg album Melee</a>, and everything about this post-hardcore band from Detroit.</p>
+        <nav>
+          <ul>
+            <li><a href="#about-dogleg">About Dogleg</a></li>
+            <li><a href="#dogleg-melee">Dogleg Melee Album</a></li>
+            <li><a href="#dogleg-discography">Discography</a></li>
+            <li><a href="#dogleg-tour">Tour</a></li>
+            <li><a href="#dogleg-streaming">Streaming</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <section id="about-dogleg">
+        <h2>About Dogleg Band</h2>
+        <p>Dogleg is an American post-hardcore band formed in Detroit, Michigan in 2015. The Dogleg band consists of Alex Stoitsiadis (lead vocalist, rhythm guitarist), Chase Macinski (bass), Parker Grissom (guitar), and Jacob Hanlon (drums). Dogleg music blends post-hardcore intensity with pop punk melodies and emo emotional depth.</p>
+
+        <h3>Dogleg Band History</h3>
+        <p>Dogleg band origins began in late 2015 when Alex Stoitsiadis started as a solo project in Rochester Hills, Michigan. Seeking creative freedom, he began writing songs in his parents' basement. The name "Dogleg" comes from the Bear vs. Shark song "Broken Dog Leg." In 2016, Stoitsiadis moved to Ann Arbor to attend the University of Michigan, where he continued developing Dogleg music.</p>
+
+        <p>Dogleg band gained momentum with their self-titled EP in 2016, followed by "Remember Alderaan?" later that year. Parker Grissom joined full-time, and the band began playing shows at Metal Frat, a Michigan fraternity known for hosting emerging bands like Brave Bird, La Dispute, and Pity Sex.</p>
+      </section>
+
+      <section id="dogleg-melee">
+        <h2>Dogleg Album - Melee</h2>
+        <p>Dogleg's debut album "Melee" was released on March 13, 2020, to widespread critical acclaim. The Dogleg Melee album showcases the band's signature sound, blending melodic pop punk with post-hardcore energy. Tracks include "Fox," "Kawasaki Backflip," and "Ganon Main."</p>
+
+        <h3>Dogleg Album Reviews</h3>
+        <p>Dogleg Melee received praise from major publications:</p>
+        <ul>
+          <li><strong>Pitchfork:</strong> "Dogleg: Melee Album Review" - Ian Cohen</li>
+          <li><strong>Paste:</strong> "Dogleg Ably Walk the Line Between Melody and Brawn on Melee" - Ben Salmon</li>
+          <li><strong>Exclaim!:</strong> "Dogleg Melee" - Adam Feibel</li>
+          <li><strong>Swim Into The Sound:</strong> "Dogleg Is The Future" - Taylor Grimes</li>
+        </ul>
+      </section>
+
+      <section id="dogleg-discography">
+        <h2>Dogleg Discography</h2>
+
+        <h3>Dogleg Studio Albums</h3>
+        <ul>
+          <li><strong>Melee</strong> (2020) - Debut full-length album</li>
+        </ul>
+
+        <h3>Dogleg Extended Plays</h3>
+        <ul>
+          <li><strong>Dogleg</strong> (2016) - Self-titled EP</li>
+          <li><strong>Remember Alderaan?</strong> (2016) - Second EP</li>
+        </ul>
+
+        <h3>Dogleg Singles</h3>
+        <ul>
+          <li><strong>Fox</strong> (2019)</li>
+          <li><strong>Kawasaki Backflip</strong> (2020)</li>
+          <li><strong>Ganon Main</strong> (2020)</li>
+        </ul>
+      </section>
+
+      <section id="dogleg-tour">
+        <h2>Dogleg Tour and Live Shows</h2>
+        <p>Dogleg band began touring Michigan in 2017 and expanded to Midwest cities like Chicago, Indianapolis, and Akron in 2018. Dogleg represented Michigan at South by Southwest in Austin, Texas in 2018. The band was scheduled for a North America tour in March/April 2022 supporting Touche Amore and Vein.fm.</p>
+
+        <p>Dogleg live shows are known for their energetic performances and connection with fans. The band frequently played at Metal Frat fraternity in Michigan, building a dedicated following in the college town scene.</p>
+      </section>
+
+      <section>
+        <h2>Dogleg Band Hiatus</h2>
+        <p>On November 15, 2021, Dogleg announced they would be entering a hiatus amid allegations of possessive behavior in relationships towards frontman Alex Stoitsiadis. Despite the hiatus, Dogleg music continues to resonate with fans worldwide.</p>
+      </section>
+
+      <section id="dogleg-streaming">
+        <h2>Dogleg Music Streaming</h2>
+        <p>Listen to Dogleg music on all major streaming platforms:</p>
+        <ul>
+          <li><a href="https://open.spotify.com/artist/dogleg">Dogleg on Spotify</a></li>
+          <li><a href="https://dogleg.bandcamp.com/">Dogleg on Bandcamp</a></li>
+          <li><a href="https://music.apple.com/artist/dogleg">Dogleg on Apple Music</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Dogleg Band Members</h2>
+        <ul>
+          <li><strong>Alex Stoitsiadis:</strong> Lead vocalist, rhythm guitarist</li>
+          <li><strong>Chase Macinski:</strong> Bass</li>
+          <li><strong>Parker Grissom:</strong> Guitar</li>
+          <li><strong>Jacob Hanlon:</strong> Drums</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Dogleg Detroit Music Scene</h2>
+        <p>Dogleg is part of the vibrant Detroit music scene, contributing to the post-hardcore and emo revival. The band's connection to the Michigan music community, including Ann Arbor and the Metal Frat scene, has been instrumental in their development.</p>
+      </section>
+    </main>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
