--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dogleg Band - Post-Hardcore Music from Detroit | Official Site</title>
     <meta name="description" content="Dogleg is an American post-hardcore band from Detroit, Michigan. Discover their music, including the acclaimed album Melee. Dogleg band news, tours, and more." />
