--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
     </script>
   </head>
   <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K5NZNZGZZP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K5NZNZGZZP');
+    </script>
     <!-- SEO Content Section - Hidden from users but visible to search engines -->
     <div style="position: absolute; left: -9999px; top: -9999px; visibility: hidden;">
       <h1>Dogleg Band</h1>
