--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
     <meta property="og:url" content="https://dogleg.band/" />
     <meta property="og:title" content="Dogleg Band - Post-Hardcore Music from Detroit" />
     <meta property="og:description" content="American post-hardcore band from Detroit. Debut album Melee released 2020." />
-    <meta property="og:image" content="https://dogleg.band/og-image.jpg" />
+    <meta property="og:image" content="https://dogleg.band/og-image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://dogleg.band/" />
     <meta property="twitter:title" content="Dogleg Band - Post-Hardcore Music from Detroit" />
     <meta property="twitter:description" content="American post-hardcore band from Detroit. Debut album Melee released 2020." />
-    <meta property="twitter:image" content="https://dogleg.band/og-image.jpg" />
+    <meta property="twitter:image" content="https://dogleg.band/og-image.png" />
 
     <!-- Additional SEO Meta Tags -->
     <meta name="author" content="Dogleg Band" />
